--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "backend": "node ./bin/www"
   },
   "dependencies": {
     "backstopjs": "^4.5.0",
