--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongodb": "^3.5.5",
+    "mongoose": "^5.9.7",
     "morgan": "~1.9.1"
   }
 }
