--- a/auth-proxy/config.json
+++ b/auth-proxy/config.json
@@ -8,5 +8,7 @@
   "secureCookie": false,
   "__secureCookie_note": "HTTPS needs for 'secureCookie=true' ",
   "maxAge": 36000000,
-  "allowedCORSHost": "http://localhost:4200"
+  "allowedCORSHost": "http://localhost:4200",
+  "dbConnectionString": "mongodb://localhost:27017/manage_users",
+  "dbUsersCollection": "user"
 }
