--- a/auth-proxy/package.json
+++ b/auth-proxy/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "http-proxy-middleware": "^1.0.3",
     "memorystore": "^1.6.2",
+    "mongoose": "^5.9.9",
     "morgan": "~1.9.1"
   }
 }
