Auth proxy should be able to register a New User

--- a/auth-proxy/config.json
+++ b/auth-proxy/config.json
@@ -10,11 +10,5 @@
   "maxAge": 36000000,
   "allowedCORSHost": "http://localhost:4200",
   "dbConnectionString": "mongodb://localhost:27017/manage_users",
-  "dbUsersCollection": "user",
-  "dbUsersCollectionSchema" : {
-    "tenant": "String",
-    "user": "String",
-    "password": "String",
-    "enabled": "Boolean"
-  }
+  "dbUsersCollection": "user"
 }
