UI Kit: bind jobs table

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -23,6 +23,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/ag-grid-custom-theme.css",
               "src/styles.css",
               "src/ui-kit.css"
             ],
