--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "ag-grid-angular": "^23.0.2",
     "ag-grid-community": "^23.0.2",
     "core-js": "^2.5.4",
+    "juxtaposejs": "^1.1.6",
     "moment": "^2.26.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
