--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -23,11 +23,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/ag-grid-custom-theme.css",
-              "src/styles.css",
-              "src/ui-kit.css",
+              "src/styles/ag-grid-custom-theme.css",
+              "src/styles/styles.css",
+              "src/styles/ui-kit.css",
               "node_modules/juxtaposejs/build/css/juxtapose.css",
-              "src/juxtapose-customization.css"
+              "src/styles/juxtapose-customization.css"
             ],
             "scripts": [
               "node_modules/juxtaposejs/build/js/juxtapose.js"
