--- a/auth-proxy/package.json
+++ b/auth-proxy/package.json
@@ -6,6 +6,7 @@
     "proxy": "node ./proxy.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "^3.0.2",
