--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -23,6 +23,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap-grid.min.css",
               "src/styles/ag-grid-custom-theme.css",
               "src/styles/styles.css",
               "src/styles/ui-kit.css",
@@ -30,7 +31,9 @@
               "src/styles/juxtapose-customization.css"
             ],
             "scripts": [
-              "node_modules/juxtaposejs/build/js/juxtapose.js"
+              "node_modules/juxtaposejs/build/js/juxtapose.js",
+              "node_modules/jquery/dist/jquery.slim.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ],
             "es5BrowserSupport": true
           },
