--- a/backend/config.json
+++ b/backend/config.json
@@ -1,5 +1,6 @@
 {
-  "storageConnectionString": "mongodb://localhost:27017/TestDb",
+  "_storageConnectionString": "mongodb://localhost:27017",
+  "storageConnectionString": "mongodb+srv://vzGo8dbd9pg:cmmf2fg88bZgP8CVWud3y@screentestcluster0.lxjfb.mongodb.net",
   "storageOptions": {
     "useNewUrlParser": true,
     "useFindAndModify": true,
