--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.7",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "sharp": "^0.25.4"
   }
 }
