split local and default (cloud) configs

--- a/auth-proxy/config-local.json
+++ b/auth-proxy/config-local.json
@@ -9,7 +9,7 @@
   "__secureCookie_note": "HTTPS needs for 'secureCookie=true' ",
   "maxAge": 36000000,
   "allowedCORSHost": "http://localhost:4200",
-  "storageConnectionString": "mongodb+srv://vzGo8dbd9pg:cmmf2fg88bZgP8CVWud3y@screentestcluster0.lxjfb.mongodb.net/test",
+  "storageConnectionString": "mongodb://localhost:27017/manage_users",
   "dbUsersCollection": "user",
   "showWebUI": false
 }
