--- a/auth-proxy/buildspec.yml
+++ b/auth-proxy/buildspec.yml
@@ -3,6 +3,6 @@ version: 0.2
 phases:
   install:
     commands:
-      - cd backend
+      - cd auth-proxy
       - npm install
       - pip install --upgrade awscli
