Beanstalk install commands

--- a/.ebextensions/01_install.config
+++ b/.ebextensions/01_install.config
@@ -1,7 +1,7 @@
 commands:
-  install_proxy:
+  - install_proxy:
     cwd: auth-proxy
     command: npm i
-  install_backend:
+  - install_backend:
     cwd: backend
     command: npm i
