Beanstalk fix paths in install container_commands

--- a/.ebextensions/01_install.config
+++ b/.ebextensions/01_install.config
@@ -1,7 +1,7 @@
-commands:
-  - install_proxy:
-    cwd: auth-proxy
-    command: npm i
-  - install_backend:
-    cwd: backend
-    command: npm i
+container_commands:
+  install_proxy:
+    cwd: /var/app/staging/auth-proxy
+    command: "npm i"
+  install_backend:
+    cwd: /var/app/staging/backend
+    command: "npm i"
