--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "screens_beanstalk_entrypoint",
   "version": "1.0.0",
   "scripts": {
-    "start.eb": "./node_modules/pm2/bin/pm2-runtime start ./pm/ecosystem.yml",
+    "start": "./node_modules/pm2/bin/pm2-runtime start ./pm/ecosystem.yml",
     "poststart": "node ./node_modules/pm2/bin/pm2 logs",
     "start.win": "./node_modules/.bin/pm2 start ./pm/ecosystem.yml",
     "stop.win": "./node_modules/.bin/pm2 stop ./pm/ecosystem.yml",
