--- a/.ebextensions/01_install.config
+++ b/.ebextensions/01_install.config
@@ -1,4 +1,7 @@
 container_commands:
+  cleanup:
+    cwd: /var/app/staging
+    command: "npm delete"
   install_proxy:
     cwd: /var/app/staging/auth-proxy
     command: "npm i"
