Backend: remove cleanup command due to failing on beanstalk deploy; Frontend: support local run

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -38,6 +38,14 @@
             "es5BrowserSupport": true
           },
           "configurations": {
+            "local": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.local.ts"
+                }
+              ]
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -70,6 +78,9 @@
             "browserTarget": "webui:build"
           },
           "configurations": {
+            "local": {
+              "browserTarget": "webui:build:local"
+            },
             "production": {
               "browserTarget": "webui:build:production"
             }
@@ -124,6 +135,9 @@
             "devServerTarget": "webui:serve"
           },
           "configurations": {
+            "local": {
+              "devServerTarget": "webui:serve:local"
+            },
             "production": {
               "devServerTarget": "webui:serve:production"
             }
