Rollback PM2 logs redirection, due to it probably way to notify Beanstalk thar app is running

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "./node_modules/.bin/pm2 start ./pm/ecosystem.yml",
-    "__poststart": "node ./node_modules/pm2/bin/pm2 logs",
+    "poststart": "node ./node_modules/pm2/bin/pm2 logs",
     "stop": "./node_modules/.bin/pm2 stop ./pm/ecosystem.yml",
     "delete": "./node_modules/.bin/pm2 delete ./pm/ecosystem.yml",
     "restart": "./node_modules/.bin/pm2 restart ./pm/ecosystem.yml",
