--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "frontend": "ng serve",
+    "frontend.local": "ng serve -c local",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
