Beanstalk: try to allow access to S3

--- a/.ebextensions/01_install.config
+++ b/.ebextensions/01_install.config
@@ -1,3 +1,24 @@
+Resources:
+  AllowS3Policy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket:
+        Ref: screensvrtdata
+      PolicyDocument:
+         -
+            Action:
+              - "s3:GetObject"
+            Effect: "Allow"
+            Resource:
+              Fn::Join:
+                - ""
+                -
+                  - "arn:aws:s3:::"
+                  -
+                    Ref: "screensvrtdata"
+                  - "/*"
+            Principal: "*"
+
 container_commands:
   install_proxy:
     cwd: /var/app/staging/auth-proxy
