Supports starting with local/cloud config (fix bucket name to exiting one)

--- a/.ebextensions/01_install.config
+++ b/.ebextensions/01_install.config
@@ -3,7 +3,7 @@ Resources:
     Type: AWS::S3::BucketPolicy
     Properties:
       Bucket:
-        Ref: screensvrtdata
+        Ref: vrtdata
       PolicyDocument:
          -
             Action:
@@ -15,7 +15,7 @@ Resources:
                 -
                   - "arn:aws:s3:::"
                   -
-                    Ref: "screensvrtdata"
+                    Ref: "vrtdata"
                   - "/*"
             Principal: "*"
 
