Beanstalk: try to allow access to S3 (use arn:aws:s3:::vrtdata as bucket)

--- a/.ebextensions/01_install.config
+++ b/.ebextensions/01_install.config
@@ -2,21 +2,13 @@ Resources:
   AllowS3Policy:
     Type: AWS::S3::BucketPolicy
     Properties:
-      Bucket:
-        Ref: vrtdata
+      Bucket: "arn:aws:s3:::vrtdata"
       PolicyDocument:
          -
             Action:
               - "s3:GetObject"
             Effect: "Allow"
-            Resource:
-              Fn::Join:
-                - ""
-                -
-                  - "arn:aws:s3:::"
-                  -
-                    Ref: "vrtdata"
-                  - "/*"
+            Resource: "arn:aws:s3:::vrtdata/*"
             Principal: "*"
 
 container_commands:
