Beanstalk: try to allow access to S3 (create separate bucket)

--- a/.ebextensions/01_install.config
+++ b/.ebextensions/01_install.config
@@ -1,14 +1,18 @@
 Resources:
+  VrtDataS3Bucket:
+    Type: AWS::S3::Bucket
+    BucketName: screenvrtdata
   AllowS3Policy:
     Type: AWS::S3::BucketPolicy
     Properties:
-      Bucket: "arn:aws:s3:::vrtdata"
+      Bucket:
+      - {Ref: VrtDataS3Bucket}
       PolicyDocument:
-         -
-            Action:
-              - "s3:GetObject"
+        Statement:
+          - Action: ["s3:GetObject"]
             Effect: "Allow"
-            Resource: "arn:aws:s3:::vrtdata/*"
+            Resource:
+              Fn::GetAtt: [VrtDataS3Bucket, Arn]
             Principal: "*"
 
 container_commands:
