Beanstalk: try to allow access to S3 (fix: Failed to deploy application. Service:AmazonCloudFormation, Message:Invalid template resource property 'BucketName')

--- a/.ebextensions/01_install.config
+++ b/.ebextensions/01_install.config
@@ -1,7 +1,10 @@
 Resources:
+
   VrtDataS3Bucket:
     Type: AWS::S3::Bucket
-    BucketName: screenvrtdata
+    Properties:
+      BucketName: screenvrtdata
+
   AllowS3Policy:
     Type: AWS::S3::BucketPolicy
     Properties:
