Beanstalk: try to allow access to S3 (REM creating policy)

--- a/.ebextensions/01_install.config
+++ b/.ebextensions/01_install.config
@@ -5,18 +5,18 @@ Resources:
     Properties:
       BucketName: screenvrtdata
 
-  AllowS3Policy:
-    Type: AWS::S3::BucketPolicy
-    Properties:
-      Bucket:
-      - {Ref: VrtDataS3Bucket}
-      PolicyDocument:
-        Statement:
-          - Action: ["s3:GetObject"]
-            Effect: "Allow"
-            Resource:
-              Fn::GetAtt: [VrtDataS3Bucket, Arn]
-            Principal: "*"
+  #AllowS3Policy:
+  #  Type: AWS::S3::BucketPolicy
+  #  Properties:
+  #    Bucket:
+  #    - {Ref: VrtDataS3Bucket}
+  #    PolicyDocument:
+  #      Statement:
+  #        - Action: ["s3:GetObject"]
+  #          Effect: "Allow"
+  #          Resource:
+  #            Fn::GetAtt: [VrtDataS3Bucket, Arn]
+  #          Principal: "*"
 
 container_commands:
   install_proxy:
