Beanstalk: try to allow access to S3 (use !Ref and !GetAtt without newline)

--- a/.ebextensions/01_install.config
+++ b/.ebextensions/01_install.config
@@ -8,14 +8,12 @@ Resources:
   AllowS3Policy:
     Type: AWS::S3::BucketPolicy
     Properties:
-      Bucket:
-        !Ref VrtDataS3Bucket
+      Bucket: !Ref VrtDataS3Bucket
       PolicyDocument:
         Statement:
           - Action: ["s3:GetObject"]
             Effect: "Allow"
-            Resource:
-              Fn::GetAtt: [VrtDataS3Bucket, Arn]
+            Resource: !GetAtt [VrtDataS3Bucket, Arn]
             Principal: "*"
 
 container_commands:
