Beanstalk: try to allow access to S3 (Use ref in policy Resource)

--- a/.ebextensions/01_install.config
+++ b/.ebextensions/01_install.config
@@ -15,7 +15,13 @@ Resources:
           - Action: ["s3:GetObject"]
             Effect: "Allow"
             Resource:
-              Fn::GetAtt: [VrtDataS3Bucket, Arn]
+              Fn::Join:
+                - ""
+                -
+                  - "arn:aws:s3:::"
+                  -
+                    Ref: "VrtDataS3Bucket"
+                  - "/*"
             Principal: "*"
 
 container_commands:
