Beanstalk: try to allow access to S3 (extend allowed actions and narrow Principal)

--- a/.ebextensions/01_install.config
+++ b/.ebextensions/01_install.config
@@ -12,7 +12,11 @@ Resources:
         Ref: VrtDataS3Bucket
       PolicyDocument:
         Statement:
-          - Action: ["s3:GetObject"]
+          - Action:
+            - "s3:ListBucketVersions"
+            - "s3:ListBucket"
+            - "s3:GetObjectVersion"
+            - "s3:GetObject"
             Effect: "Allow"
             Resource:
               Fn::Join:
@@ -22,7 +26,8 @@ Resources:
                   -
                     Ref: "VrtDataS3Bucket"
                   - "/*"
-            Principal: "*"
+            Principal:
+              AWS: "arn:aws:iam::772145494782:role/aws-elasticbeanstalk-ec2-role"
 
 container_commands:
   install_proxy:
