Beanstalk: try to allow access to S3 (disable creation S3 bucket and policy because something wrong with creating policy's Principal)

--- a/.ebextensions/01_install.config
+++ b/.ebextensions/01_install.config
@@ -1,33 +1,33 @@
 Resources:
 
-  VrtDataS3Bucket:
-    Type: AWS::S3::Bucket
-    Properties:
-      BucketName: screenvrtdata
+  #VrtDataS3Bucket:
+  #  Type: AWS::S3::Bucket
+  #  Properties:
+  #    BucketName: screenvrtdata
 
-  AllowS3Policy:
-    Type: AWS::S3::BucketPolicy
-    Properties:
-      Bucket:
-        Ref: VrtDataS3Bucket
-      PolicyDocument:
-        Statement:
-          - Action:
-            - "s3:ListBucketVersions"
-            - "s3:ListBucket"
-            - "s3:GetObjectVersion"
-            - "s3:GetObject"
-            Effect: "Allow"
-            Resource:
-              Fn::Join:
-                - ""
-                -
-                  - "arn:aws:s3:::"
-                  -
-                    Ref: "VrtDataS3Bucket"
-                  - "/*"
-            Principal:
-              AWS: "arn:aws:iam::772145494782:role/aws-elasticbeanstalk-ec2-role"
+  #AllowS3Policy:
+  #  Type: AWS::S3::BucketPolicy
+  #  Properties:
+  #    Bucket:
+  #      Ref: VrtDataS3Bucket
+  #    PolicyDocument:
+  #      Statement:
+  #        - Action:
+  #          - "s3:ListBucketVersions"
+  #          - "s3:ListBucket"
+  #          - "s3:GetObjectVersion"
+  #          - "s3:GetObject"
+  #          Effect: "Allow"
+  #          Resource:
+  #            Fn::Join:
+  #              - ""
+  #              -
+  #                - "arn:aws:s3:::"
+  #                -
+  #                  Ref: "VrtDataS3Bucket"
+  #                - "/*"
+  #          Principal:
+  #            AWS: "arn:aws:iam::772145494782:role/aws-elasticbeanstalk-ec2-role" # WRONG. Works with "*", but it's too much
 
 container_commands:
   install_proxy:
