--- a/backend/config-local.json
+++ b/backend/config-local.json
@@ -5,5 +5,6 @@
     "useFindAndModify": true,
     "useUnifiedTopology": true
   },
-  "mediaStorageStrategy": "LocalFS"
+  "mediaStorageStrategy": "S3",
+  "_mediaStorageStrategy": "LocalFS"
 }
