Store vrt_data outside of app folder to prevent restarting Beanstalk app because of `Change detected on path vrt_data/... for app backend - restarting`

--- a/backend/config-local.json
+++ b/backend/config-local.json
@@ -6,5 +6,6 @@
     "useUnifiedTopology": true
   },
   "mediaStorageStrategy": "S3",
-  "_mediaStorageStrategy": "LocalFS"
+  "_mediaStorageStrategy": "LocalFS",
+  "vrtDataFullPath": "c:\\Temp\\vrtdata"
 }
