--- a/backend/config.json
+++ b/backend/config.json
@@ -5,5 +5,6 @@
     "useFindAndModify": true,
     "useUnifiedTopology": true
   },
-  "mediaStorageStrategy": "S3"
+  "mediaStorageStrategy": "S3",
+  "vrtDataFullPath": "/tmp/vrtdata"
 }
