[Move to AWS: 4] Deploy frontend to AWS S3/CloudFront under the "beta" domain name; [Move to AWS: 4.1] AWS Frontend: add SSL

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "frontend": "ng serve --port 4201",
     "frontend.local": "ng serve -c local",
-    "build": "ng build",
+    "build": "ng build -c production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
