[Move to AWS: 4.3] AWS Beanstalk: add SSL

--- a/.ebextensions/01_install.config
+++ b/.ebextensions/01_install.config
@@ -1,5 +1,27 @@
 Resources:
 
+  sslSecurityGroupIngress:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      GroupId: {"Fn::GetAtt" : ["AWSEBSecurityGroup", "GroupId"]}
+      IpProtocol: tcp
+      ToPort: 443
+      FromPort: 443
+      CidrIp: 0.0.0.0/0
+
+  # https://docs.amazonaws.cn/en_us/elasticbeanstalk/latest/dg/https-storingprivatekeys.html
+  AWSEBAutoScalingGroup:
+    Metadata:
+      AWS::CloudFormation::Authentication:
+        S3Auth:
+          type: "s3"
+          buckets: ["vrtcerts"]
+          roleName:
+            "Fn::GetOptionSetting":
+              Namespace: "aws:autoscaling:launchconfiguration"
+              OptionName: "IamInstanceProfile"
+              DefaultValue: "aws-elasticbeanstalk-ec2-role"
+
   #VrtDataS3Bucket:
   #  Type: AWS::S3::Bucket
   #  Properties:
@@ -29,10 +51,25 @@ Resources:
   #          Principal:
   #            AWS: "arn:aws:iam::772145494782:role/aws-elasticbeanstalk-ec2-role" # WRONG. Works with "*", but it's too much
 
+files:
+  /etc/nginx/fullchain.pem:
+    mode: "000400"
+    owner: root
+    group: root
+    source: 'https://vrtcerts.s3.amazonaws.com/etc/letsencrypt/live/beta.api.patico.pro/fullchain.pem'
+    authentication: S3Access
+
+  /etc/nginx/privkey.pem:
+    mode: "000400"
+    owner: root
+    group: root
+    source: 'https://vrtcerts.s3.amazonaws.com/etc/letsencrypt/live/beta.api.patico.pro/privkey.pem'
+    authentication: S3Access
+
 container_commands:
-  install_proxy:
+  01_install_proxy:
     cwd: /var/app/staging/auth-proxy
     command: "npm i"
-  install_backend:
+  02_install_backend:
     cwd: /var/app/staging/backend
     command: "npm i"
