--- a/auth-proxy/config.json
+++ b/auth-proxy/config.json
@@ -4,9 +4,8 @@
   "proxyPath": ["/api/", "/vrt_data/"],
   "cookieSign": "secretKey",
   "sessionSecret": "sessionSecret71R369C31V186C12BX",
-  "sessionCookieName": "twghtf",
-  "secureCookie": false,
-  "__secureCookie_note": "HTTPS needs for 'secureCookie=true' ",
+  "sessionCookieName": "__Secure-twghtf",
+  "secureCookie": true,
   "maxAge": 36000000,
   "allowedCORSHost": "https://beta.patico.pro",
   "storageConnectionString": "mongodb+srv://vzGo8dbd9pg:cmmf2fg88bZgP8CVWud3y@screentestcluster0.lxjfb.mongodb.net/test",
