`Failed to launch the browser process` issue

--- a/.ebextensions/01_install.config
+++ b/.ebextensions/01_install.config
@@ -73,3 +73,10 @@ container_commands:
   02_install_backend:
     cwd: /var/app/staging/backend
     command: "npm i"
+  03_install_chromium:
+    cwd: /var/app/staging/backend
+    command: |
+      npm i puppeteer
+      npm i puppeteer-core
+      wget https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm
+      #yum install -y -t ./google-chrome-stable_current_x86_64.rpm 2> /dev/null
