--- a/.ebextensions/01_install.config
+++ b/.ebextensions/01_install.config
@@ -66,6 +66,10 @@ files:
     source: 'https://vrtcerts.s3.amazonaws.com/etc/letsencrypt/live/beta.api.patico.pro/privkey.pem'
     authentication: S3Access
 
+#packages:
+#  yum:
+#    htop: []
+
 container_commands:
   01_install_proxy:
     cwd: /var/app/staging/auth-proxy
@@ -79,4 +83,4 @@ container_commands:
       npm i puppeteer
       npm i puppeteer-core
       wget https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm
-      #yum install -y -t ./google-chrome-stable_current_x86_64.rpm 2> /dev/null
+      #yum install -y -t ./google-chrome-stable_current_x86_64.rpm >> /dev/null
