[Bug] Proxy: User cannot login back, if his session was finished (do not use `cookie.expires` in session opts, have to use maxAge instead of expires)

--- a/auth-proxy/config-local.json
+++ b/auth-proxy/config-local.json
@@ -14,8 +14,8 @@
 
   "cookies": {
     "secure": false,
-    "maxAge": 36000000,
-    "httpOnly": false,
+    "maxAge": 30000,
+    "httpOnly": true,
     "domain": "",
     "path": "/"
   }
