--- a/run-worker/bs-function/package.json
+++ b/run-worker/bs-function/package.json
@@ -7,12 +7,13 @@
   "scripts": {
     "compile": "./node_modules/.bin/tsc",
     "compile.watch": "./node_modules/.bin/tsc -w",
-    "tests": "node tests.js"
+    "tests": "mocha -t 30000"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.59",
     "@types/axios": "^0.14.0",
     "@types/node": "^14.0.27",
+    "mocha": "^8.1.1",
     "typescript": "^3.9.7"
   },
   "dependencies": {
