--- a/run-worker/bs-function/package.json
+++ b/run-worker/bs-function/package.json
@@ -14,6 +14,7 @@
     "@types/axios": "^0.14.0",
     "@types/node": "^14.0.27",
     "mocha": "^8.1.1",
+    "sinon": "^9.0.2",
     "typescript": "^3.9.7"
   },
   "dependencies": {
