use SQS for task processing...

--- a/backend/config.json
+++ b/backend/config.json
@@ -6,5 +6,6 @@
     "useUnifiedTopology": true
   },
   "mediaStorageStrategy": "S3",
-  "vrtDataFullPath": "/tmp/vrtdata"
+  "vrtDataFullPath": "/tmp/vrtdata",
+  "taskQueueUrl": "https://sqs.us-east-1.amazonaws.com/772145494782/vrt_task"
 }
