--- a/backend/config.json
+++ b/backend/config.json
@@ -7,5 +7,6 @@
   },
   "mediaStorageStrategy": "S3",
   "vrtDataFullPath": "/tmp/vrtdata",
-  "taskQueueUrl": "https://sqs.us-east-1.amazonaws.com/772145494782/vrt_task"
+  "taskQueueUrl": "https://sqs.us-east-1.amazonaws.com/772145494782/vrt_task",
+  "queuePollInterval": 500
 }
