backend subscribes on results queue

--- a/backend/config.json
+++ b/backend/config.json
@@ -8,5 +8,6 @@
   "mediaStorageStrategy": "S3",
   "vrtDataFullPath": "/tmp/vrtdata",
   "taskQueueUrl": "https://sqs.us-east-1.amazonaws.com/772145494782/vrt_task",
+  "resultsQueueUrl": "https://sqs.us-east-1.amazonaws.com/772145494782/vrt_results",
   "queuePollInterval": 5000
 }
