--- a/backend/config-local.json
+++ b/backend/config-local.json
@@ -11,5 +11,6 @@
   "mediaStorageStrategy": "LocalFS",
   "vrtDataFullPath": "C:\\Git\\screens.io\\backend\\vrt_data",
   "taskQueueUrl": "https://sqs.us-east-1.amazonaws.com/772145494782/vrt_task",
+  "resultsQueueUrl": "https://sqs.us-east-1.amazonaws.com/772145494782/vrt_results",
   "queuePollInterval": 5000
 }
