--- a/run-worker/bs-function/package.json
+++ b/run-worker/bs-function/package.json
@@ -14,8 +14,10 @@
     "@types/aws-lambda": "^8.10.59",
     "@types/axios": "^0.14.0",
     "@types/node": "^14.0.27",
+    "jest": "^26.4.2",
     "mocha": "^8.1.1",
     "sinon": "^9.0.2",
+    "ts-mockito": "^2.6.1",
     "typescript": "^3.9.7"
   },
   "dependencies": {
